--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -1,3 +1,7 @@
+#header {
+    height: var(--header-bar-height);
+}
+
 #navBar {
     display: flex;
     flex-direction: row;
